--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --open --mode development",
-    "link-react": "npm link ../facebook-ai-challenge/app/node_modules/react"
+    "link-react": "npm link ../wit-ai-test/node_modules/react"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "react": "^16.13.1",
     "react-media": "^1.10.0",
     "hark": "^1.2.3",
-    "recordrtc": "^5.6.1"
+    "recordrtc": "^5.6.1",
+    "getusermedia": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
@@ -24,6 +25,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "getusermedia": "^2.0.1",
     "hark": "^1.2.3",
     "react-media": "^1.10.0",
     "recordrtc": "^5.6.1",
